[package]
name = "rspamd-crypto"
version = "0.1.0"
edition = "2021"
authors = ["Vsevolod Stakhov <vsevolod@rspamd.com>"]
description = "Cryptography support for Rspamd in Rust"
license = "Apache-2.0"
repository = "https://github.com/rspamd/rspamd_crypto_rs"

[dependencies]
# Cryptographic dependencies
chacha20 = "0.9"
crypto_box = { version = "0.9", default-features = false, features = ["chacha20", "alloc", "getrandom"] }
poly1305 = "0.8"
ed25519-dalek = "2.1"
curve25519-dalek = "4.1"
blake2b_simd = "1.0"
rand = "0.9"
crypto_secretbox = { version = "0.1", default-features = false, features = ["chacha20"] }

# Other dependencies
rspamd-base32 = "0.1"

[dev-dependencies]
hex = "0.4"